--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -588,7 +588,7 @@
 
         function updatePlayersInGameList() {
             console.log("PlayersInGame List Updating");
-            playersInGameList = "";
+            let playersInGameList = "";
 
             for (var player in playersInGame) {
                 if (peer.id == player) {
