--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -34,7 +34,7 @@
     </header>
 
     <div class="Main">
-        <div id="starting-slide">
+        <div id="starting-slide" class="slide">
             <div class="Main-top-container">
                 <h2 class="game-title">Mimic Revanced</h2>
             </div>
@@ -431,8 +431,7 @@
         function triggerCurrentRound() {
             $('#im-ready-button').show();
             $('#player-secret-word').text(playersInGame[peer.id]["word"]);
-
-            $('#starting-slide')
+            $('.slide')
                 .fadeOut(500)
                 .promise()
                 .then(function () {
@@ -605,7 +604,7 @@
         }
     </script>
 
-    <script src="./mimicGameLogic.js?v=0.86">
+    <script src="./mimicGameLogic.js?v=0.87">
     </script>
 </body>
 
