--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -465,6 +465,7 @@
                 .fadeOut(500)
                 .promise()
                 .then(function () {
+                    $('#rules-slide').show();
                     $('#game-slide').fadeIn(500);
                 });
         }
