--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -435,7 +435,7 @@
                 .fadeOut(500)
                 .promise()
                 .then(function () {
-                    $('#rules-slide').show();
+                    $('#rules-slide').fadeIn(500);
                     $('#game-slide').fadeIn(500);
                 });
         }
