--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -130,7 +130,7 @@
                     <div id="winning-player-list">
                     </div>
                     <br>
-                    <button onclick="activateGame()" class="regular-button">Start a New Game</button>
+                    <button onclick="resetGame()" class="regular-button">Back to Lobby</button>
                 </div>
             </div>
         </div>
