--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -109,6 +109,11 @@
                     </div>
                 </div>
             </div>
+            <div id="wait-vote-slide" class="no-display slide">
+                <div class="Main-mid-container">
+                    <h3 style="text-align: center;">Waiting for other players to vote...</h3>
+                </div>
+            </div>
             <div id="eliminated-slide" class="no-display slide">
                 <div class="Main-mid-container center-text">
                     <h3 id="eliminated-player-name"></h3><br>
