--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -304,7 +304,7 @@
                             triggerAnnounceWinner(data[1]["winners"], data[1]["mimicsWon"]);
                             break;
                         case 'resetGame':
-                            triggerResetGame();
+                            resetGame();
                             break;
                         default:
                             console.log(data)
