--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -534,20 +534,20 @@
             // Set the winning team text
             if (mimicsWon) {
                 if (players[peer.id]["role"] == "Mimic") {
-                    winningTeamText = "You Won!, ";
+                    winningTeamText = "<span style=\"color: rgb(43, 255, 0);\">";
                 } else {
-                    winningTeamText = "You Lost!, ";
+                    winningTeamText = "<span style=\"color: color: rgb(255, 0, 0);\">";
                 }
-                winningTeamText = winningTeamText + "Mimics Won!";
+                winningTeamText = winningTeamText + "Mimics Won!</span>";
             } else {
                 if (players[peer.id]["role"] == "Civilian") {
-                    winningTeamText = "You Won!, ";
+                    winningTeamText = "<span style=\"color: rgb(43, 255, 0);\">";
                 } else {
-                    winningTeamText = "You Lost!, ";
+                    winningTeamText = "<span style=\"color: color: rgb(255, 0, 0);\">";
                 }
                 winningTeamText = winningTeamText + "Civilians Won!";
             }
-            $('#winning-team').text(winningTeamText);
+            $('#winning-team').html(winningTeamText);
 
             // Show the winners slide
             $('.slide').fadeOut(500)
