--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -572,14 +572,14 @@
                 if (players[peer.id]["role"] == "Mimic") {
                     winningTeamText = "<span style=\"color: rgb(43, 255, 0);\">";
                 } else {
-                    winningTeamText = "<span style=\"color: color: rgb(255, 0, 0);\">";
+                    winningTeamText = "<span style=\"color: rgb(255, 0, 0);\">";
                 }
                 winningTeamText = winningTeamText + "Mimics Won!</span>";
             } else {
                 if (players[peer.id]["role"] == "Civilian") {
                     winningTeamText = "<span style=\"color: rgb(43, 255, 0);\">";
                 } else {
-                    winningTeamText = "<span style=\"color: color: rgb(255, 0, 0);\">";
+                    winningTeamText = "<span style=\"color: rgb(255, 0, 0);\">";
                 }
                 winningTeamText = winningTeamText + "Civilians Won!";
             }
