small text update

--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -538,14 +538,14 @@
                 } else {
                     winningTeamText = "<span style=\"color: rgb(255, 0, 0);\">";
                 }
-                winningTeamText = winningTeamText + "Mimics Won!</span>";
+                winningTeamText = winningTeamText + "Mimics Win!</span>";
             } else {
                 if (players[peer.id]["role"] == "Civilian") {
                     winningTeamText = "<span style=\"color: rgb(43, 255, 0);\">";
                 } else {
                     winningTeamText = "<span style=\"color: rgb(255, 0, 0);\">";
                 }
-                winningTeamText = winningTeamText + "Civilians Won!";
+                winningTeamText = winningTeamText + "Civilians Win!";
             }
             $('#winning-team').html(winningTeamText);
 
