--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -66,7 +66,7 @@
         <div id="game-slide" class="no-display">
             <div class="word-top-container">
                 <p>Your secret word is:</p>
-                <h2 id="player-secret-word" class="no-display">Tree</h2>
+                <h2 id="player-secret-word">Tree</h2>
             </div>
             <div id="rules-slide" class="slide">
                 <div class="Main-mid-container">
