--- a/CaptionIt/send.html
+++ b/CaptionIt/send.html
@@ -382,15 +382,20 @@
         };
 
         function togglePlayerStatus(e, playerID) {
-            if (players.hasOwnProperty(playerID)) {
-                if (players[playerID]["inPlay"] == true) {
-                    players[playerID]["inPlay"] = false;
-                } else {
-                    players[playerID]["inPlay"] = true;
+            if (players[playerID]["inPlay"] == true) {
+                if (conn && conn.open) {
+                    conn.send(["setPlayerInPlay", {
+                        "inPlay": false,
+                        "playerID": peer.id
+                    }]);
                 }
-                updatePlayerList();
             } else {
-                console.log("Invalid playerID: " + playerID);
+                if (conn && conn.open) {
+                    conn.send(["setPlayerInPlay", {
+                        "inPlay": true,
+                        "playerID": peer.id
+                    }]);
+                }
             }
         }
 
@@ -418,10 +423,10 @@
                         "</p></div>"
                     if (players[player]["inPlay"] == true) {
                         playersConnectedList = playersConnectedList +
-                            "<div onclick=\"togglePlayerStatus(this, peer.id)\" id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-user playerStatus-button playing\"></i></div></div>"
+                            "<div id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-user playerStatus-button playing\"></i></div></div>"
                     } else {
                         playersConnectedList = playersConnectedList +
-                            "<div onclick=\"togglePlayerStatus(this, peer.id)\" id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-eye playerStatus-button spectating\"></i></div></div>"
+                            "<div id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-eye playerStatus-button spectating\"></i></div></div>"
                     }
                 }
             }
