--- a/CaptionIt/send.html
+++ b/CaptionIt/send.html
@@ -26,7 +26,7 @@
     <header>
         <div class="top-container unselectable">
             <p class="share-link-prompt-text">Share this link to invite others. (click to copy)</p>
-            <div id="share-link" onclick="copyShareLink()" title="Copy this link and send it to your friends.">
+            <div id="receiver-id" onclick="copyShareLink()" title="Copy this link and send it to your friends.">
                 f1718af9-f9c5-4df6-a9da-db0954ea2368</div>
             <br>
             <div id="status" class="status">Connecting . . .</div>
@@ -203,6 +203,8 @@
 
                 conn.on('open', function () {
                     console.log(peer.id);
+                    recvId.innerHTML = "<span id=\"share-link\">https://" + window.location
+                        .hostname + "/captionit/send.html?hostid=" + conn.peer + "</span>";
                     status.innerHTML = "Connected to: " + conn.peer;
                     console.log("Connected to: " + conn.peer);
 
