--- a/CaptionIt/host.html
+++ b/CaptionIt/host.html
@@ -135,7 +135,7 @@
                     }
 
                     recvId.innerHTML = "<span id=\"share-link\">https://" + window.location
-                        .hostname + "/captionit/send.html?hostid=" + peer.id + "</span>";
+                        .hostname + "/CaptionIt/send.html?hostid=" + peer.id + "</span>";
 
                     status.innerText = "Awaiting connection...";
                 });
