--- a/CaptionIt/send.html
+++ b/CaptionIt/send.html
@@ -204,7 +204,7 @@
                 conn.on('open', function () {
                     console.log(peer.id);
                     recvId.innerHTML = "<span id=\"share-link\">https://" + window.location
-                        .hostname + "/captionit/send.html?hostid=" + conn.peer + "</span>";
+                        .hostname + "/CaptionIt/send.html?hostid=" + conn.peer + "</span>";
                     status.innerHTML = "Connected to: " + conn.peer;
                     console.log("Connected to: " + conn.peer);
 
