--- a/CaptionIt/send.html
+++ b/CaptionIt/send.html
@@ -91,6 +91,27 @@
 
     <script src="./peerjsmin.js"></script>
     <script>
+        // Cookie Handling
+        function setCookie(name, value, days) {
+            const date = new Date();
+            date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+            const expires = 'expires=' + date.toUTCString();
+            document.cookie = name + '=' + value + '; ' + expires + '; path=/';
+        }
+
+        function getCookie(name) {
+            const value = '; ' + document.cookie;
+            const parts = value.split('; ' + name + '=');
+            if (parts.length === 2) return parts.pop().split(';').shift();
+        }
+
+        let deviceID = getCookie('deviceID');
+        if (!deviceID) {
+            deviceID = generateDeviceID();
+            setCookie('deviceID', deviceID, 365); // Store the device ID in a cookie for 365 days
+        }
+
+        // Connection and Game Handling
         // Generate a random number between 0 and 1
         let randomNumber = Math.random();
         // Multiply the result by 10 to get a number between 0 and 10
@@ -213,6 +234,7 @@
 
                     // Send player data to the host
                     conn.send(["setPlayerData", {
+                        "deviceID": deviceID,
                         "playerName": clientPlayerName,
                         "playerID": peer.id,
                         "inPlay": true,
