--- a/CaptionIt/host.html
+++ b/CaptionIt/host.html
@@ -105,6 +105,14 @@
             if (parts.length === 2) return parts.pop().split(';').shift();
         }
 
+        function generateDeviceID() {
+            return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function (c) {
+                const r = Math.random() * 16 | 0,
+                    v = c === 'x' ? r : (r & 0x3 | 0x8);
+                return v.toString(16);
+            });
+        }
+
         let deviceID = getCookie('deviceID');
         if (!deviceID) {
             deviceID = generateDeviceID();
